base.core/src/main/java/eapli/base/antlr/tarefaAutomatica/ScriptValidacaoTarefasAutomaticasParser.java
// Generated from C:/Users/gonca/Documents/LEIM/2_ANO/2_SEMESTRE/EAPLI/lei20_21_s4_2dk_02/base.core/src/main/java/eapli/base/antlr/tarefaAutomatica\ScriptValidacaoTarefasAutomaticas.g4 by ANTLR 4.9.1
package eapli.base.antlr.tarefaAutomatica;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScriptValidacaoTarefasAutomaticasParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, OPERADOR_MATEMATICO=27, OPERADOR_COMPARAR=28, PALAVRA=29, 
		INTEIRO=30, WS=31;
	public static final int
		RULE_start = 0, RULE_script = 1, RULE_operacao_matematica = 2, RULE_chamar_funcao = 3, 
		RULE_xml = 4, RULE_sendEmail = 5, RULE_content = 6, RULE_verificacaoIf = 7, 
		RULE_condicao = 8, RULE_compararConteudoPalavra = 9, RULE_conteudoif = 10, 
		RULE_config = 11, RULE_changeNIF = 12, RULE_changeTelephoneNumber = 13, 
		RULE_inteiro = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "script", "operacao_matematica", "chamar_funcao", "xml", "sendEmail", 
			"content", "verificacaoIf", "condicao", "compararConteudoPalavra", "conteudoif", 
			"config", "changeNIF", "changeTelephoneNumber", "inteiro"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'START'", "'{'", "'}'", "'END'", "'consultar'", "';'", "'calcValorTotal'", 
			"'AlterarPercentagemBaseDesconto'", "'atualizar'", "':'", "'calcValorDesconto'", 
			"'SendEmail'", "'('", "','", "')'", "'if'", "'then'", "'\"'", "'desconto e'", 
			"'%'", "'changeNIF'", "'changeTelephoneNumber'", "'*'", "'/'", "'+'", 
			"'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "OPERADOR_MATEMATICO", "OPERADOR_COMPARAR", "PALAVRA", 
			"INTEIRO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ScriptValidacaoTarefasAutomaticas.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScriptValidacaoTarefasAutomaticasParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ScriptContext script() {
			return getRuleContext(ScriptContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(T__0);
			setState(31);
			match(T__1);
			setState(32);
			script();
			setState(33);
			match(T__2);
			setState(34);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptContext extends ParserRuleContext {
		public List<Chamar_funcaoContext> chamar_funcao() {
			return getRuleContexts(Chamar_funcaoContext.class);
		}
		public Chamar_funcaoContext chamar_funcao(int i) {
			return getRuleContext(Chamar_funcaoContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(36);
				chamar_funcao();
				}
				}
				setState(39); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << T__15) | (1L << T__20) | (1L << T__21))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operacao_matematicaContext extends ParserRuleContext {
		public List<InteiroContext> inteiro() {
			return getRuleContexts(InteiroContext.class);
		}
		public InteiroContext inteiro(int i) {
			return getRuleContext(InteiroContext.class,i);
		}
		public TerminalNode OPERADOR_COMPARAR() { return getToken(ScriptValidacaoTarefasAutomaticasParser.OPERADOR_COMPARAR, 0); }
		public Operacao_matematicaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao_matematica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterOperacao_matematica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitOperacao_matematica(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitOperacao_matematica(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operacao_matematicaContext operacao_matematica() throws RecognitionException {
		Operacao_matematicaContext _localctx = new Operacao_matematicaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_operacao_matematica);
		try {
			setState(46);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				inteiro(0);
				setState(42);
				match(OPERADOR_COMPARAR);
				setState(43);
				inteiro(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				inteiro(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Chamar_funcaoContext extends ParserRuleContext {
		public SendEmailContext sendEmail() {
			return getRuleContext(SendEmailContext.class,0);
		}
		public ChangeNIFContext changeNIF() {
			return getRuleContext(ChangeNIFContext.class,0);
		}
		public ChangeTelephoneNumberContext changeTelephoneNumber() {
			return getRuleContext(ChangeTelephoneNumberContext.class,0);
		}
		public XmlContext xml() {
			return getRuleContext(XmlContext.class,0);
		}
		public VerificacaoIfContext verificacaoIf() {
			return getRuleContext(VerificacaoIfContext.class,0);
		}
		public Chamar_funcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chamar_funcao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterChamar_funcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitChamar_funcao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitChamar_funcao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Chamar_funcaoContext chamar_funcao() throws RecognitionException {
		Chamar_funcaoContext _localctx = new Chamar_funcaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_chamar_funcao);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				sendEmail();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				changeNIF();
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 3);
				{
				setState(50);
				changeTelephoneNumber();
				}
				break;
			case T__4:
			case T__6:
			case T__7:
			case T__8:
			case T__10:
				enterOuterAlt(_localctx, 4);
				{
				setState(51);
				xml();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 5);
				{
				setState(52);
				verificacaoIf();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XmlContext extends ParserRuleContext {
		public XmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xml; }
	 
		public XmlContext() { }
		public void copyFrom(XmlContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CalcValorTotalContext extends XmlContext {
		public Token cod_produto;
		public Token quantidade;
		public List<TerminalNode> INTEIRO() { return getTokens(ScriptValidacaoTarefasAutomaticasParser.INTEIRO); }
		public TerminalNode INTEIRO(int i) {
			return getToken(ScriptValidacaoTarefasAutomaticasParser.INTEIRO, i);
		}
		public CalcValorTotalContext(XmlContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterCalcValorTotal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitCalcValorTotal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitCalcValorTotal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PercentagemBaseDescontoContext extends XmlContext {
		public Token cod_produto;
		public TerminalNode INTEIRO() { return getToken(ScriptValidacaoTarefasAutomaticasParser.INTEIRO, 0); }
		public List<VerificacaoIfContext> verificacaoIf() {
			return getRuleContexts(VerificacaoIfContext.class);
		}
		public VerificacaoIfContext verificacaoIf(int i) {
			return getRuleContext(VerificacaoIfContext.class,i);
		}
		public PercentagemBaseDescontoContext(XmlContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterPercentagemBaseDesconto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitPercentagemBaseDesconto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitPercentagemBaseDesconto(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtualizarCategoriaContext extends XmlContext {
		public Token parametro;
		public Token valor;
		public Token categoria;
		public List<TerminalNode> PALAVRA() { return getTokens(ScriptValidacaoTarefasAutomaticasParser.PALAVRA); }
		public TerminalNode PALAVRA(int i) {
			return getToken(ScriptValidacaoTarefasAutomaticasParser.PALAVRA, i);
		}
		public TerminalNode INTEIRO() { return getToken(ScriptValidacaoTarefasAutomaticasParser.INTEIRO, 0); }
		public AtualizarCategoriaContext(XmlContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterAtualizarCategoria(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitAtualizarCategoria(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitAtualizarCategoria(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConsultarContext extends XmlContext {
		public Token cod_produto;
		public TerminalNode INTEIRO() { return getToken(ScriptValidacaoTarefasAutomaticasParser.INTEIRO, 0); }
		public ConsultarContext(XmlContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterConsultar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitConsultar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitConsultar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CalcValorDescontoContext extends XmlContext {
		public Token cod_produto;
		public Token quantidade;
		public List<TerminalNode> INTEIRO() { return getTokens(ScriptValidacaoTarefasAutomaticasParser.INTEIRO); }
		public TerminalNode INTEIRO(int i) {
			return getToken(ScriptValidacaoTarefasAutomaticasParser.INTEIRO, i);
		}
		public CalcValorDescontoContext(XmlContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterCalcValorDesconto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitCalcValorDesconto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitCalcValorDesconto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final XmlContext xml() throws RecognitionException {
		XmlContext _localctx = new XmlContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_xml);
		int _la;
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				_localctx = new ConsultarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				match(T__4);
				setState(56);
				((ConsultarContext)_localctx).cod_produto = match(INTEIRO);
				setState(57);
				match(T__5);
				}
				break;
			case T__6:
				_localctx = new CalcValorTotalContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				match(T__6);
				setState(59);
				((CalcValorTotalContext)_localctx).cod_produto = match(INTEIRO);
				setState(60);
				((CalcValorTotalContext)_localctx).quantidade = match(INTEIRO);
				setState(61);
				match(T__5);
				}
				break;
			case T__7:
				_localctx = new PercentagemBaseDescontoContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				match(T__7);
				setState(63);
				((PercentagemBaseDescontoContext)_localctx).cod_produto = match(INTEIRO);
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(64);
					verificacaoIf();
					}
					}
					setState(67); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__15 );
				setState(69);
				match(T__5);
				}
				break;
			case T__8:
				_localctx = new AtualizarCategoriaContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				match(T__8);
				setState(72);
				match(T__9);
				setState(73);
				((AtualizarCategoriaContext)_localctx).parametro = match(PALAVRA);
				setState(74);
				((AtualizarCategoriaContext)_localctx).valor = match(INTEIRO);
				setState(75);
				((AtualizarCategoriaContext)_localctx).categoria = match(PALAVRA);
				setState(76);
				match(T__5);
				}
				break;
			case T__10:
				_localctx = new CalcValorDescontoContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(77);
				match(T__10);
				setState(78);
				((CalcValorDescontoContext)_localctx).cod_produto = match(INTEIRO);
				setState(79);
				((CalcValorDescontoContext)_localctx).quantidade = match(INTEIRO);
				setState(80);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SendEmailContext extends ParserRuleContext {
		public SendEmailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sendEmail; }
	 
		public SendEmailContext() { }
		public void copyFrom(SendEmailContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EnviarEmailContext extends SendEmailContext {
		public Token subject;
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode PALAVRA() { return getToken(ScriptValidacaoTarefasAutomaticasParser.PALAVRA, 0); }
		public EnviarEmailContext(SendEmailContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterEnviarEmail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitEnviarEmail(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitEnviarEmail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SendEmailContext sendEmail() throws RecognitionException {
		SendEmailContext _localctx = new SendEmailContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sendEmail);
		try {
			_localctx = new EnviarEmailContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__11);
			setState(84);
			match(T__12);
			setState(85);
			((EnviarEmailContext)_localctx).subject = match(PALAVRA);
			setState(86);
			match(T__13);
			setState(87);
			content(0);
			setState(88);
			match(T__14);
			setState(89);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentContext extends ParserRuleContext {
		public TerminalNode INTEIRO() { return getToken(ScriptValidacaoTarefasAutomaticasParser.INTEIRO, 0); }
		public TerminalNode PALAVRA() { return getToken(ScriptValidacaoTarefasAutomaticasParser.PALAVRA, 0); }
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		return content(0);
	}

	private ContentContext content(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ContentContext _localctx = new ContentContext(_ctx, _parentState);
		ContentContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_content, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEIRO:
				{
				setState(92);
				match(INTEIRO);
				}
				break;
			case PALAVRA:
				{
				setState(93);
				match(PALAVRA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(102);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(100);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new ContentContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_content);
						setState(96);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(97);
						match(INTEIRO);
						}
						break;
					case 2:
						{
						_localctx = new ContentContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_content);
						setState(98);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(99);
						match(PALAVRA);
						}
						break;
					}
					} 
				}
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VerificacaoIfContext extends ParserRuleContext {
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public ConteudoifContext conteudoif() {
			return getRuleContext(ConteudoifContext.class,0);
		}
		public VerificacaoIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verificacaoIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).enterVerificacaoIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScriptValidacaoTarefasAutomaticasListener ) ((ScriptValidacaoTarefasAutomaticasListener)listener).exitVerificacaoIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ScriptValidacaoTarefasAutomaticasVisitor ) return ((ScriptValidacaoTarefasAutomaticasVisitor<? extends T>)visitor).visitVerificacaoIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VerificacaoIfContext verificacaoIf() throws RecognitionException {
		VerificacaoIfContext _localctx = new VerificacaoIfContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_verificacaoIf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__15);
			setState(106);
			match(T__9);
			setState(107);
			condicao();
			setState(108);
			match(T__16);
			setState(109);
			match(T__9);
			setState(110);
			conteudoif(0);
			setState(111);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
